--- a/src/app/layout/home/home.component.html
+++ b/src/app/layout/home/home.component.html
@@ -684,14 +684,20 @@
                             <mat-icon>person</mat-icon>By Admin
                         </h6>
                         <h6>
-                            <mat-icon>date_range</mat-icon>May 4,2019
+                            <mat-icon>date_range</mat-icon>FEB 17,2020
                         </h6>
                     </div>
-                    <h1>The Richland Center Shooping News and weekly shooper</h1>
-                    <p>Let one fifth i bring fly to divided face for bearing divide unto seed. Winged divided light
-                        Forth.</p>
-                    <a>Read More <mat-icon>arrow_right_alt
+                    <h1> Amazon Fashion Shopping</h1>
+                    <p> Upto 60% off - Top Brands - Jackets, Shirts, Dresses &  formal wear, western wear, nightwear and lingerie.
+                        Get addition discounts on Slected cards.    
+                        Buy now! Easy & Fast Delivery. No Cost EMI Available. Best Deals.</p>
+
+                        <a target="_blank"
+                        href="https://www.amazon.in/gp/bestsellers/apparel?_encoding=UTF8&linkCode=ib1&tag=stackasian-21&linkId=07d4225b3d4856f46549a58179aecedf&ref_=ihub_curatedcontent_c71318f9-d59d-4bc1-bc5a-6fdf0c0257fc">
+                       Read More
+                        <mat-icon>arrow_right_alt
                         </mat-icon></a>
+
                 </div>
                 <div class="blog-featured" fxLayout="column">
                     <img src="https://preview.colorlib.com/theme/ashion/img/discount.jpg">
