--- a/src/app/layout/home/home.component.html
+++ b/src/app/layout/home/home.component.html
@@ -97,8 +97,7 @@
                                     <mat-icon>star</mat-icon>
                                 </div>
                                 <div class="reviewd">
-                                    <p> Another magnificence from Apple. I was updated from iPhone X and it was an
-                                        extraordinary involvement in all the most recent specs and impeccably smooth.
+                                    <p> Another greatness from Apple. I was refreshed from iPhone X and it was a phenomenal association, on the whole, the latest specs and faultlessly smooth.
                                     </p>
                                 </div>
                             </div>
@@ -135,9 +134,7 @@
                                     <mat-icon>star</mat-icon>
                                 </div>
                                 <div class="reviewd">
-                                    <p> Excellent product its design ,camera ,performance ,super amoled display, sound
-                                        everything is super Spen features omg .
-                                        super flagship smartphone .</p>
+                                    <p> Phenomenal item its plan, camera, execution, super AMOLED show, sound everything is super Spen highlights omg. super lead cell phone.</p>
                                 </div>
                             </div>
                         </div>
@@ -173,8 +170,7 @@
                                     <mat-icon>star</mat-icon>
                                 </div>
                                 <div class="reviewd">
-                                    <p> 3rd gen product is just awesome. Very much improved version...indian english
-                                        accent is no longer the issue . Part sound quality is just awesome...</p>
+                                    <p> third gen item is simply great. Particularly improved version...indian english highlight is not, at this point the issue . Part stable quality is simply magnificent...</p>
                                 </div>
                             </div>
                         </div>
@@ -210,9 +206,7 @@
                                     <mat-icon>star</mat-icon>
                                 </div>
                                 <div class="reviewd">
-                                    <p> My Dad is 86 yrs old and staying home alone while we are at work..I have
-                                        installed the device to keep an watch that he is safe at home and to be
-                                        connected all the time.</p>
+                                    <p> My Dad is 86 yrs old and remaining at home alone while we are at work..I have introduced the gadget to protect a watch that he is at home and to be associated constantly.</p>
                                 </div>
                             </div>
                         </div>
@@ -249,9 +243,7 @@
                                     <mat-icon>star</mat-icon>
                                 </div>
                                 <div class="reviewd">
-                                    <p> It's a very lovely and fabulous product. This is the best option in this price
-                                        range. Voice clarity is fantastic. Bluetooth connectivity and bass are also
-                                        better. </p>
+                                    <p> It's a beautiful and astonishing item. This is the most ideal choice in this value range. Voice clearness is phenomenal. Bluetooth availability and bass are additionally better. </p>
                                 </div>
                             </div>
                         </div>
@@ -288,8 +280,7 @@
                                     <mat-icon>star</mat-icon>
                                 </div>
                                 <div class="reviewd">
-                                    <p> Really Fantastic quality and design . Delighted with product and pricing
-                                        reasonable for quality unlike some of the rubbish you see for sale.</p>
+                                    <p> Truly Fantastic quality and plan. Charmed with item and valuing sensible for quality not at all like a portion of the trash you see available to be purchased.</p>
                                 </div>
                             </div>
                         </div>
@@ -325,9 +316,7 @@
                                     <mat-icon>star</mat-icon>
                                 </div>
                                 <div class="reviewd">
-                                    <p> It was for my son, but can frankly say, HE , had tried various other similar
-                                        products (few available at half the rate, too), but is ATTACHED, to this brand &
-                                        product</p>
+                                    <p> It was for my child, yet can honestly say, HE , had attempted different other comparative items (scarcely any accessible at a large portion of the rate, as well), yet is ATTACHED, to this brand and item</p>
                                 </div>
                             </div>
                         </div>
@@ -363,9 +352,7 @@
                                     <mat-icon>star</mat-icon>
                                 </div>
                                 <div class="reviewd">
-                                    <p>Arrived before time, very nicely packed. No damage in transit because of great
-                                        packing. Very Easy to assemble. High Quality at a Great Price. Best product for
-                                        a family. </p>
+                                    <p>Shown up before time, pleasantly stuffed. No harm on the way due to extraordinary pressing. Easy to amass. High Caliber at a Great Price. Best item for a family. </p>
                                 </div>
                             </div>
                         </div>
