--- a/src/app/layout/blog/blog.component.html
+++ b/src/app/layout/blog/blog.component.html
@@ -1,1 +1,24 @@
-<p>blog works!</p>
+<div>
+    {{blog.title}}
+</div>
+
+{{blog.productName}}
+
+<a href={{blog.productLink}} target="_blank">
+    <img height="200px" width="200px" border="0" src={{blog.image}}></a>
+
+<a href={{blog.productLink}} target="_blank">
+    <img height="200px" width="200px" border="0" src={{blog.imageTwo}}></a>
+
+
+<a href={{blog.productLink}} target="_blank">
+    <img height="200px" width="200px" border="0" src={{blog.imageThree}}></a>
+
+
+    <div>
+        <div *ngFor="let paragraph of blog.paragraphs">
+            <div>
+               {{paragraph.para}} 
+            </div>
+        </div>
+    </div>
