--- a/src/app/layout/auth/header/header.component.scss
+++ b/src/app/layout/auth/header/header.component.scss
@@ -1,6 +1,6 @@
 section.amazonheader {
-    padding: 10px 6px 11px 6px;
-    background: linear-gradient(45deg, #c4efe4, #bce2d0);
+    padding:0px 6px 0px 6px;
+    background:linear-gradient(45deg, #c4efe4, #c5f0e5);
 
 }
 .header {
@@ -29,7 +29,7 @@ section.amazonheader {
     font-family: inter;
     font-size: 13px;
     width: 100%;
-    height: 47px;
+    height: 45px;
     font-family: "Open Sans", sans-serif;
     border-radius: 40px 0 0 40px;
 }
@@ -55,26 +55,22 @@ section.amazonheader {
     border: 1px solid #ddd;
     background: #ffffff;
     border-radius: 40px ;
-
 }
 .menu {
     background: #ffffff;
-    height: 47px;
+    height: 45px;
     border-right: 1px solid #ddd;
     border-radius: 40px 0px 0px 40px;
-
 }
 .search form{
-    height: 47px;
+    height: 45px;
     display: flex;
-
 }
 .search input {
     width: 90%;
-    height: 47px;
     border: 0;
     padding: 0px 0pc 0 1pc;
-    height: 47px;
+    height: 45px;
     position: relative;
     top: 1px;
     font-family: "Open Sans", sans-serif;
@@ -83,8 +79,8 @@ section.amazonheader {
 .search mat-icon.mat-icon {
     
     font-size: 14px;
-    height: 47px;
-    line-height: 47px;
+    height: 45px;
+    line-height: 45px;
     padding: 0px 1px;
     color: #b2aaa5 !important;
 }
@@ -141,17 +137,15 @@ form.example-form mat-icon.mat-icon {
 }
 .menus ul li {
     font-size: 12px;
-    color: #5e5757;
+    color: #010101;
     font-family: "Open Sans", sans-serif;
     padding: 0px 1pc;
     cursor: pointer;
     font-weight: 600;
-
 }
 .menus ul li span:hover{
     color:#fe9b3b;
    text-decoration: underline;
-
 }
 .logo span {
     cursor: pointer;
@@ -159,12 +153,10 @@ form.example-form mat-icon.mat-icon {
 ul li span {
     padding: 0px 5px;
 }
-
 .menus ul li button {
-    background: #feca0d;
+    background:#ffc63a;
     border: 0;
     padding: 10px 15px;
-    /* border-radius: 35px; */
     color: #fff;
     font-size: 13px;
     font-family: "Open Sans", sans-serif;
