--- a/src/app/layout/blog/blog.component.html
+++ b/src/app/layout/blog/blog.component.html
@@ -1,24 +1,37 @@
-<div>
-    {{blog.title}}
-</div>
-
-{{blog.productName}}
-
-<a href={{blog.productLink}} target="_blank">
-    <img height="200px" width="200px" border="0" src={{blog.image}}></a>
-
-<a href={{blog.productLink}} target="_blank">
-    <img height="200px" width="200px" border="0" src={{blog.imageTwo}}></a>
-
-
-<a href={{blog.productLink}} target="_blank">
-    <img height="200px" width="200px" border="0" src={{blog.imageThree}}></a>
-
-
-    <div>
-        <div *ngFor="let paragraph of blog.paragraphs">
-            <div>
-               {{paragraph.para}} 
+<section class="home" fxLayout="column" ngClass.xs="amazonhome1" ngClass.sm="amazonhome2" ngClass.md="amazonhome3">
+        <!----top-line-->
+        <div class="category-amazon" fxLayout="row">
+            <div class="top-line">
+                <div class="single-line" fxFlex.xs="588" fxFlex.sm="590px" fxFlex.md="950px" fxFlex.lg="1270px"
+                    fxFlex.xl="1910px">
+                    <b class="home" routerLink="/">Home</b>
+                    <mat-icon>keyboard_arrow_right</mat-icon> <b><a>Products</a></b>
+                    <mat-icon>keyboard_arrow_right</mat-icon> <b><a> {{blog.productName}}</a></b>
+                </div>
             </div>
         </div>
-    </div>
+        <!----category-line-->
+        <div class="category" fxLayout="row">
+            <div class="category" fxLayout="row" fxLayout.xs="column" fxLayout.sm="column" fxFlex.xs="97%" fxFlex.sm="590px" fxFlex.md="950px" fxFlex.lg="1270px"
+                fxFlex.xl="1910px">
+                <div class="img-product" fxFlex="40%" fxLayout="row">
+                    <a href={{blog.productLink}} target="_blank">
+                        <img  src={{blog.image}}></a>
+    
+                    <a href={{blog.productLink}} target="_blank">
+                        <img  src={{blog.imageTwo}}></a>
+    
+    
+                    <a href={{blog.productLink}} target="_blank">
+                        <img  src={{blog.imageThree}}></a>
+                </div>
+                <div class="heading-product" fxFlex="60%">
+                    <h1> {{blog.title}}</h1>
+                    <h5>{{blog.productName}}</h5>
+                    <p *ngFor="let paragraph of blog.paragraphs">
+                        {{paragraph.para}}
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
