--- a/src/app/layout/category/category.component.scss
+++ b/src/app/layout/category/category.component.scss
@@ -5,7 +5,9 @@
     width: 100%;
     height: 55px;
 }
-
+section.home {
+    min-height: 100vh;
+}
 .top-line {
     margin: 0 auto;
 }
@@ -66,6 +68,56 @@
     text-decoration: line-through;
     color: #999696;
 }
+// .viewer mat-icon.add{
+//     background: #ffd715;
+//     border-radius: 2px;
+//     color: #fff;
+//     font-size: 16px;
+//     text-align: center;
+//     height: 25px;
+//     width: 25px;
+//     line-height: 25px;
+//     position: absolute;
+//     top: unset;
+//     bottom: unset;
+//     margin: -2pc;
+// }
+mat-icon.mat-icon.notranslate.add.material-icons.mat-icon-no-color:after {
+    content: "";
+    margin: 0 0.5em;
+    display: inline-block;
+    border: 7px solid transparent;
+    border-top: 8px solid #fed83d;
+    border-bottom: 0 none;
+    position: relative;
+    left: -18px;
+    top: 13px;
+}
+.iconmore mat-icon.mat-icon.notranslate.add.material-icons.mat-icon-no-color {
+    color: #fff;
+    top: 0 !important;
+    left: 7px !important;
+    right: 0;
+    text-align: center;
+    width: 25px;
+    height: 25px;
+    line-height: 25px;
+}
+.iconmore{
+    background: #ffd715;
+    border-radius: 2px;
+    color: #fff;
+    font-size: 16px;
+    text-align: center;
+    height: 25px;
+    width: 30px;
+    line-height: 25px;
+    position: absolute;
+    top: unset;
+    bottom: unset;
+    margin: -3pc 3pc;
+}
+
 .star mat-icon {
     width: auto;
     color: #ffc400;
