--- a/src/app/layout/auth/header/header.component.html
+++ b/src/app/layout/auth/header/header.component.html
@@ -16,8 +16,8 @@
                             All Category <mat-icon>keyboard_arrow_down</mat-icon>
                         </button>
                         <mat-menu #menu="matMenu" class="menu_category">
-                            <button mat-menu-item routerLink="/category">
-                                <mat-icon>keyboard_arrow_left</mat-icon>Deals
+                            <button mat-menu-item routerLink="/category/mobiles">
+                                <mat-icon>keyboard_arrow_left</mat-icon>mobiles
                             </button>
                             <button mat-menu-item>
                                 <mat-icon>keyboard_arrow_left</mat-icon>Alexa Skills
