--- a/src/app/layout/home/home.component.html
+++ b/src/app/layout/home/home.component.html
@@ -20,7 +20,7 @@
         <div class="cate-amazon" fxLayout="row" fxLayout.xs="column">
             <div class="cate-img left1" fxFlex="40%" fxFlex.xs="100%" fxFlex.sm="100%">
                 <h3>All Fashion</h3>
-                <p>Purchase Women's Clothes handpicked by style <br />specialists on the Amazon</p>
+                <p>Purchase Women's Clothes handpicked by style <br />specialists and preferred by Review stackasian</p>
                 <a target="_blank"
                     href="https://www.amazon.in/gp/bestsellers/apparel?_encoding=UTF8&linkCode=ib1&tag=stackasian-21&linkId=07d4225b3d4856f46549a58179aecedf&ref_=ihub_curatedcontent_c71318f9-d59d-4bc1-bc5a-6fdf0c0257fc">
                     Shop Now</a>
@@ -760,13 +760,14 @@
                             <mat-icon>date_range</mat-icon>May 4,2019
                         </h6>
                     </div>
-                    <h1>The Richland Center Shooping News and weekly shooper</h1>
-                    <p>Let one fifth i bring fly to divided face for bearing divide unto seed. Winged divided light
-                        Forth.</p>
+                    <h1>The Review Stackasian Center Shooping News and weekly shooper</h1>
+                    <p> A Review Tool helps in finding the best item in the MarketPlace.</p>
                     <a>Read More <mat-icon>arrow_right_alt
                         </mat-icon></a>
                 </div>
             </div>
+
+            
         </div>
     </div>
 </section>
