--- a/src/app/layout/blog/blog.component.html
+++ b/src/app/layout/blog/blog.component.html
@@ -32,6 +32,11 @@
                         {{paragraph.para}}
                     </p>
                 </div>
+
+                <h1> product price {{blog.price}}</h1>
+                <h1> product views {{blog.views}}</h1>
+                <h1> product re-views {{blog.reviews}}</h1>
+
             </div>
         </div>
     </section>
