--- a/src/app/layout/auth/header/header.component.html
+++ b/src/app/layout/auth/header/header.component.html
@@ -19,8 +19,8 @@
                             <button mat-menu-item routerLink="/category/mobiles">
                                 <mat-icon>keyboard_arrow_left</mat-icon>mobiles
                             </button>
-                            <button mat-menu-item>
-                                <mat-icon>keyboard_arrow_left</mat-icon>Alexa Skills
+                            <button mat-menu-item routerLink="/category/refined-oil">
+                                <mat-icon>keyboard_arrow_left</mat-icon>refined oil
                             </button>
                             <button mat-menu-item>
                                 <mat-icon>keyboard_arrow_left</mat-icon>Amazon Devices
