--- a/src/app/layout/full-view/full-view.component.html
+++ b/src/app/layout/full-view/full-view.component.html
@@ -27,7 +27,7 @@
                         </div>
                         <div class="text" fxFlex="60%" fxFlex.xs="100%" fxFlex.sm="100%">
 
-                            <h3>New Apple iPhone 12 (64GB) - Blue</h3>
+                            <h3>{{product.productName}}</h3>
                             <div fxLayout="row" fxLayout.xs="column" fxLayout.sm="column">
                                 <div class="price">
                                     <u> ₹84,900 </u> ₹84,889
