--- a/src/app/layout/blog-two/blog-two.component.scss
+++ b/src/app/layout/blog-two/blog-two.component.scss
@@ -71,3 +71,7 @@ section.home.amazonhome1 .img-product a {
 section.home.amazonhome2 .img-product a {
     width: 30%;
 }
+
+.ft{
+    margin: 0 auto;
+}
