--- a/src/app/layout/full-view/full-view.component.scss
+++ b/src/app/layout/full-view/full-view.component.scss
@@ -238,3 +238,7 @@ section.home.amazonhome2 .top-line {
 section.home.amazonhome1  .single-line {
     padding: 0px 0pc;
 }
+
+.ft{
+    margin: 0 auto;
+}
