--- a/src/app/layout/blog-two/blog-two.component.html
+++ b/src/app/layout/blog-two/blog-two.component.html
@@ -1,4 +1,8 @@
 <section class="home" fxLayout="column" ngClass.xs="amazonhome1" ngClass.sm="amazonhome2" ngClass.md="amazonhome3">
+    <div class="ft" *ngIf="dataload">
+        <mat-spinner></mat-spinner>
+    </div>
+    <div *ngIf="!dataload">
     <!----top-line-->
     <div class="category-amazon" fxLayout="row">
         <div class="top-line">
@@ -33,5 +37,6 @@
                 </p>
             </div>
         </div>
+    </div>
     </div>
 </section>
