--- a/src/app/layout/blog/blog.component.html
+++ b/src/app/layout/blog/blog.component.html
@@ -1,4 +1,8 @@
 <section class="home" fxLayout="column" ngClass.xs="amazonhome1" ngClass.sm="amazonhome2" ngClass.md="amazonhome3">
+    <div class="ft" *ngIf="dataload">
+        <mat-spinner></mat-spinner>
+    </div>
+    <div *ngIf="!dataload">
         <!----top-line-->
         <div class="category-amazon" fxLayout="row">
             <div class="top-line">
@@ -12,18 +16,18 @@
         </div>
         <!----category-line-->
         <div class="category" fxLayout="row">
-            <div class="category" fxLayout="row" fxLayout.xs="column" fxLayout.sm="column" fxFlex.xs="97%" fxFlex.sm="590px" fxFlex.md="950px" fxFlex.lg="1270px"
-                fxFlex.xl="1910px">
+            <div class="category" fxLayout="row" fxLayout.xs="column" fxLayout.sm="column" fxFlex.xs="97%"
+                fxFlex.sm="590px" fxFlex.md="950px" fxFlex.lg="1270px" fxFlex.xl="1910px">
                 <div class="img-product" fxFlex="40%" fxLayout="row">
                     <a href={{blog.productLink}} target="_blank">
-                        <img  src={{blog.image}}></a>
-    
+                        <img src={{blog.image}}></a>
+
                     <a href={{blog.productLink}} target="_blank">
-                        <img  src={{blog.imageTwo}}></a>
-    
-    
+                        <img src={{blog.imageTwo}}></a>
+
+
                     <a href={{blog.productLink}} target="_blank">
-                        <img  src={{blog.imageThree}}></a>
+                        <img src={{blog.imageThree}}></a>
                 </div>
                 <div class="heading-product" fxFlex="60%">
                     <h1> {{blog.title}}</h1>
@@ -39,4 +43,6 @@
 
             </div>
         </div>
-    </section>
+
+    </div>
+</section>
