--- a/src/app/layout/full-view/full-view.component.html
+++ b/src/app/layout/full-view/full-view.component.html
@@ -1,4 +1,9 @@
 <section class="home" fxLayout="column" ngClass.xs="amazonhome1" ngClass.sm="amazonhome2" ngClass.md="amazonhome3">
+  
+    <div class="ft" *ngIf="dataload">
+        <mat-spinner></mat-spinner>
+    </div>
+    <div *ngIf="!dataload">
     <!----top-line-->
     <div class="category-amazon" fxLayout="row">
         <div class="top-line">
@@ -100,5 +105,6 @@
             </div>
 
         </div>
+    </div>
     </div>
 </section>
